Devise initial install

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,5 +1,10 @@
 <h1>About Blocipedia</h1>
 
+<p>Created by <a href="http://carolinecourtney.com">
+Caroline Courtney</a>, &copy; 2016</p>
+
+<h3>Use Case</h3>
+
 <p>
   <a href="https://en.wikipedia.org/wiki/Wiki">Wikis</a>
   are a great way to collaborate on community-
@@ -8,6 +13,3 @@
   lets users create their own wikis and share them
   publicly or privately with other collaborators.
 </p>
-
-<p>Created by <a href="http://carolinecourtney.com">
-Caroline Courtney</a>, &copy; 2016</p>
