--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,7 +1,14 @@
 <h1>All Public Wikis</h1>
 
-<ul class="all-wikis">
-  <% @wikis.each do |wiki| %>
-    <li><%= link_to wiki.title, wiki_path(wiki.id) %></li>
-  <% end %>
-</ul>
+<div class="row">
+  <div class="col-md-8">
+    <ul class="all-wikis">
+      <% @wikis.each do |wiki| %>
+        <li><%= link_to wiki.title, wiki_path(wiki.id) %></li>
+      <% end %>
+    </ul>
+  </div>
+  <div class="col-md-4">
+    <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-primary' %>
+  </div>
+</div>
