--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -4,11 +4,15 @@
   <div class="col-md-8">
     <p>by: <%= @wiki.user.email %> |
       <% if @wiki.public %>Public<% else %>Private<% end %>
+      <% if @wiki.user == current_user %> - Owner<% end %>
     </p>
     <p><%= @wiki.body %></p>
   </div>
   <div class="col-md-4">
-    <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
-    <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this Wiki?'} %>
+    <% if policy(@wiki).update? %>
+      <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
+      <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger',
+        data: {confirm: 'Are you sure you want to delete this Wiki?'} %>
+    <% end %>
   </div>
 </div>
