Users can pay to upgrade

--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -3,7 +3,9 @@
     <p>Share your knowledge:</p>
     <ul>
       <li>Get as elaborate as you like</li>
-      <li>Upgrade to Premium to be able to make Private Wikis.</li>
+      <li>Upgrade to
+        <span class='glyphicon glyphicon-star' style="color: #fc0;"></span>
+        Premium to be able to make Private Wikis.</li>
       <li>Public Wikis can be edited by anyone, but only its owner
           (if they are a premium user) may change its 'public' setting.</li>
       <li>Private Wikis can be edited by the owner or any other user the
