--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,14 @@
       <li><%= link_to "Wikis", wikis_path %></li>
       <div class="pull-right user-info">
         <% if user_signed_in? %>
-        Signed in as: <strong><%= current_user.email %></strong> |
+        Signed in as:
+        <% if current_user.premium? %>
+          <span class='glyphicon glyphicon-star' style="color: #fc0;"></span>
+        <% end %>
+        <% if current_user.admin? %>
+          <span class='glyphicon glyphicon-cog' style="color: #c00;"></span>
+        <% end %>
+        <strong><%= current_user.email %></strong> |
         <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> -
         <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link' %>
         <% else %>
