--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -5,3 +5,5 @@
   by your logged in status in the upper right! Taste the brilliance of a
   new era for your Blocipedia usage!
 </p>
+
+<h3>Total Charge: 15 smackeroos even.</h3>
