--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,8 +1,12 @@
+<h1>Premium Account Charge</h1>
+
+<p>Going Premium is a one-time charge of $15 USD.</p>
+
 <%= form_tag charges_path do %>
   <article>
     <% if flash[:error].present? %>
       <div id="error_explanation">
-        <p><%= flash[:error] %></p>
+        <h4><%= flash[:error] %></h4>
       </div>
     <% end %>
     <label class="amount">
