--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,5 +1,6 @@
 <h1>All Wikis</h1>
 
+
 <div class="row">
   <div class="col-md-8">
     <ul class="all-wikis">
@@ -10,5 +11,8 @@
   </div>
   <div class="col-md-4">
     <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-primary' %>
+    <% if current_user.premium? %>
+      <%= link_to 'Downgrade account', downgrade_account_path(user_id: current_user.id), class: 'btn btn-primary' %>
+    <% end %>
   </div>
 </div>
