Premium users can opt to downgrade

--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -6,4 +6,5 @@
   new era for your Blocipedia usage!
 </p>
 
-<h3>Total Charge: 15 smackeroos even.</h3>
+<h3>Charges $9.99 today, and then monthly on the
+  <%= Time.now.strftime("%d").to_i.ordinalize %>, unless cancelled.</h3>
