--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "About", about_path %></li>
       <li><%= link_to "Wikis", wikis_path %></li>
+      <% if user_signed_in? %>
+        <li><%= link_to "Profile", "/users/#{current_user.id}" %></li>
+      <% end %>
       <div class="pull-right user-info">
         <% if user_signed_in? %>
         Signed in as:
