--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -2,7 +2,14 @@
 
 <div class="row">
   <div class="col-md-8">
-    <p>by: <%= @wiki.user.email %> |
+    <p>by:
+      <% if @wiki.user.premium? %>
+        <span class='glyphicon glyphicon-star' style="color: #fc0;"></span>
+      <% end %>
+      <% if @wiki.user.admin? %>
+        <span class='glyphicon glyphicon-cog' style="color: #c00;"></span>
+      <% end %>
+      <%= @wiki.user.email %> |
       <% if @wiki.public %>Public<% else %>Private<% end %>
       <% if @wiki.user == current_user %> - Owner<% end %>
     </p>
