--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -22,7 +22,7 @@
         <%= f.label :body %>
         <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter wiki body" %>
       </div>
-      <% if @wiki.user == current_user || params[:action] == 'new' %>
+      <% if current_user.premium? && (@wiki.user == current_user || params[:action] == 'new') %>
         <div class="form-group">
           <%= f.label :public, class: 'checkbox' do %>
             <%= f.check_box :public %> Public wiki
