Redcarpet Markdown parsing added

--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the Wikis controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.markdown {
+  background-color: #ffc;
+  border-bottom: 1px solid #cc9;
+  margin: 0;
+  padding: 10px;
+}
