--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,9 +35,9 @@
       <%= link_to 'Upgrade Account', new_subscription_path, class: 'btn btn-warning' %>
     <% end %>
     <% if current_user.premium? %>
-      <%= link_to 'Downgrade Account', downgrade_account_path, class: 'btn btn-danger',
+    <%= link_to 'Downgrade Account', subscription_path, class: 'btn btn-danger',
         data: {confirm: 'Downgrading your account will end your subscription, and
-          make all your private wikis public.  Are you sure?'} %>
+          make all your private wikis public.  Are you sure?'}, method: :delete %>
     <% end %>
   </div>
 </div>
