--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -7,24 +7,24 @@
   <div class="form-row">
     <label>
       <span>Card Number</span>
-      <input value="4242 4242 4242 4242" type="text" size="20" data-stripe="number"/>
+      <input type="text" size="20" data-stripe="number"/>
     </label>
   </div>
 
   <div class="form-row">
     <label>
       <span>CVC</span>
-      <input value="123" type="text" size="4" data-stripe="cvc"/>
+      <input type="text" size="4" data-stripe="cvc"/>
     </label>
   </div>
 
   <div class="form-row">
     <label>
       <span>Expiration (MM/YYYY)</span>
-      <input value="08" type="text" size="2" data-stripe="exp-month"/>
+      <input type="text" size="2" data-stripe="exp-month"/>
     </label>
     <span> / </span>
-    <input value="2019" type="text" size="4" data-stripe="exp-year"/>
+    <input type="text" size="4" data-stripe="exp-year"/>
   </div>
 
   <button type="submit">Submit Payment</button>
