--- a/app/views/collaborators/_collaborator.html.erb
+++ b/app/views/collaborators/_collaborator.html.erb
@@ -1,12 +1,11 @@
 <div>
-  <% collaborator = Collaborator.where(user: user, wiki: @wiki).first %>
-  <% if Collaborator.where(user: user, wiki: @wiki).empty? %>
-    <%= link_to [user, Collaborator.new], class: 'btn btn-default', method: :post do %>
-      <i class="glyphicon glyphicon-ok"> </i>&nbsp; Add <%= user.name %>
+  <% if wiki.collaborating_users.include?(user) %>
+    <%= link_to user_collaborator_path(user_id: user.id, wiki_id: wiki.id), class: 'btn btn-warning', method: :delete do %>
+      <i class="glyphicon glyphicon-remove"> </i>&nbsp; Remove <%= user.name %>
     <% end %>
   <% else %>
-    <%= link_to [user, collaborator], class: 'btn btn-warning', method: :delete do %>
-      <i class="glyphicon glyphicon-remove"> </i>&nbsp; Remove <%= user.name %>
+    <%= link_to user_collaborators_path(user_id: user.id, wiki_id: wiki.id), class: 'btn btn-default', method: :post do %>
+      <i class="glyphicon glyphicon-ok"> </i>&nbsp; Add <%= user.name %>
     <% end %>
   <% end %>
 </div>
