--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-4">
+<!--   <div class="col-md-4">
     <p>Share your knowledge:</p>
     <ul>
       <li>Get as elaborate as you like</li>
@@ -12,7 +12,8 @@
         owner designates.</li>
     </ul>
   </div>
-  <div class="col-md-8">
+ --> 
+  <div class="col-md-6">
     <%= form_for @wiki do |f| %>
       <div class="form-group">
         <%= f.label :title %>
@@ -41,5 +42,9 @@
         <%= f.submit "Save", class: 'btn btn-success' %>
       </div>
     <% end %>
+  </div>
+  <div class="col-md-6">
+    <h3>Preview</h3>
+    <div id="wiki-preview"></div>
   </div>
 </div>
