--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <li><%= link_to "About", about_path %></li>
       <li><%= link_to "Wikis", wikis_path %></li>
       <% if user_signed_in? %>
-        <li><%= link_to "Profile", "/users/#{current_user.id}" %></li>
+        <li><%= link_to "Profile", profile_path(current_user.name.parameterize) %></li>
       <% end %>
       <div class="pull-right user-info">
         <% if user_signed_in? %>
