Ajax add/remove collaborators & other polish

--- a/app/views/collaborators/create.js.erb
+++ b/app/views/collaborators/create.js.erb
@@ -1,1 +1,1 @@
-$('#collab-<%= @user.id %>').html("created");
+$('#collab-<%= @user.id %>').html('<%= link_to user_collaborators_path(user_id: @user.id, wiki_id: @wiki.id), class: 'btn btn-warning', method: :delete, remote: true do %><i class="glyphicon glyphicon-remove"> </i>&nbsp; Remove <%= @user.name %><% end %>');
