--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -12,3 +12,10 @@
   margin: 5px;
   display: inline-block;
 }
+
+.collab-name {
+  font-size: 80%;
+  background-color: #ffc;
+  padding: 5px;
+  margin: 5px;
+}
