--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -1,18 +1,5 @@
 <div class="row">
-  <div class="col-md-4">
-    <p>Share your knowledge:</p>
-    <ul>
-      <li>Get as elaborate as you like</li>
-      <li>Upgrade to
-        <span class='glyphicon glyphicon-star' style="color: #fc0;"></span>
-        Premium to be able to make Private Wikis.</li>
-      <li>Public Wikis can be edited by anyone, but only its owner
-          (if they are a premium user) may change its 'public' setting.</li>
-      <li>Private Wikis can be edited by the owner or any other user the
-        owner designates.</li>
-    </ul>
-  </div>
-  <div class="col-md-8">
+  <div class="col-md-6">
     <%= form_for @wiki do |f| %>
       <div class="form-group">
         <%= f.label :title %>
@@ -41,5 +28,9 @@
         <%= f.submit "Save", class: 'btn btn-success' %>
       </div>
     <% end %>
+  </div>
+  <div class="col-md-6">
+    <h3>Preview</h3>
+    <div id="wiki-preview"></div>
   </div>
 </div>
