--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -30,7 +30,8 @@
     <% end %>
   </div>
   <div class="col-md-6">
-    <h3>Preview</h3>
+    <h3>Content Preview:</h3>
+    <hr/>
     <div id="wiki-preview"></div>
   </div>
 </div>
