Even more polish

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -47,7 +47,11 @@ Caroline Courtney</a>, &copy; 2016</p>
 </p>
 
 <p>
-  If you wish to test out upgrading your account, this version uses the test
-  api keys, and may be tried out using the Stripe's <a href="https://stripe.com/docs/testing">
-  test credit cards</a>.  Test it up!
+  If you wish to test out being a premium user for free, here's the sample premium login info:
+  <code>
+    email: person@example.com
+    password: helloworld
+  </code>
+  Test it up, and try creating some private wikis and adding/removing
+  other users in the system as collaborators!
 </p>
