--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>Blocipedia</title>
- <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
- <%= stylesheet_link_tag  'https:////cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/styles/default.min.css' %>
- <%= javascript_include_tag 'application', 'https://js.stripe.com/v2/', 'data-turbolinks-track' => true %>
- <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/showdown/1.3.0/showdown.min.js' %>
- <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/highlight.min.js' %>
- <%= csrf_meta_tags %>
- <%= tag :meta, name: "stripe-key", content: ENV['stripe_live_publishable_key'] %>
+  <title>Blocipedia</title>
+  <script>
+    window.onload = function() {
+      blocmetrics.report('eventName');
+    };
+  </script>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag  'https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/styles/default.min.css' %>
+  <%= javascript_include_tag 'application', 'https://js.stripe.com/v2/', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/showdown/1.3.0/showdown.min.js' %>
+  <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.2.0/highlight.min.js' %>
+  <%= csrf_meta_tags %>
+  <%= tag :meta, name: "stripe-key", content: ENV['stripe_live_publishable_key'] %>
 </head>
 <body>
 
