--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,4 +1,6 @@
-<h1>All Wikis</h1>
+<h1 onload="function() {
+  blocmetrics.report('eventName');
+};">All Wikis</h1>
 
 <div class="row">
   <div class="col-md-8">
