--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -1,3 +1,6 @@
+<script type='text/javascript'>
+  blocmetrics.report('Edit Wiki');
+</script>
 <h1>Edit a Wiki</h1>
 
 <%= render partial: 'form', locals: { wiki: @wiki } %>
