--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <title>Blocipedia</title>
   <script>
     window.onload = function() {
-      blocmetrics.report('eventName');
+      blocmetrics.report('application.html.erb');
     };
   </script>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
