--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,3 +1,6 @@
+<script type='text/javascript'>
+  blocmetrics.report('Edit User Profile');
+</script>
 <h1>Edit <%= resource_name.to_s.humanize %>: <%= current_user.email %></h1>
 
 <div class="row">
