--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
+<script type='text/javascript'>
+  blocmetrics.report('User View');
+</script>
 <h1><% if @user.premium? %>
     <span class='glyphicon glyphicon-star' style="color: #fc0;"></span>
   <% end %>
