--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,6 +1,7 @@
-<h1 onload="function() {
-  blocmetrics.report('eventName');
-};">All Wikis</h1>
+<script type='text/javascript'>
+  blocmetrics.report('All Viewable Wikis');
+</script>
+<h1>All Wikis</h1>
 
 <div class="row">
   <div class="col-md-8">
