--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -1,3 +1,6 @@
+<script type='text/javascript'>
+  blocmetrics.report('New Wiki');
+</script>
 <h1>Create a new Wiki</h1>
 
 <%= render partial: 'form', locals: { wiki: @wiki } %>
